--- a/index.html
+++ b/index.html
@@ -35,9 +35,56 @@
         .button:hover {
             background-color: #555;
         }
-    </style>
-</head>
-<body>
+    <style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: #0b0b0f;
+        background-image: radial-gradient(circle at 30% 20%, rgba(60,60,80,0.4), transparent 60%),
+                          radial-gradient(circle at 80% 70%, rgba(80,60,90,0.3), transparent 60%);
+        color: #e8e6f0;
+        font-family: 'Courier New', monospace;
+        text-align: center;
+        padding: 80px 20px;
+    }
+
+    h1 {
+        font-size: 3.5em;
+        letter-spacing: 6px;
+        text-transform: uppercase;
+        color: #f2e9ff;
+        text-shadow: 0 0 8px rgba(180, 150, 255, 0.6);
+    }
+
+    p {
+        font-size: 1.2em;
+        max-width: 600px;
+        margin: 30px auto;
+        line-height: 1.8;
+        color: #cfcbe6;
+    }
+
+    .button {
+        display: inline-block;
+        padding: 14px 30px;
+        margin-top: 40px;
+        background-color: transparent;
+        color: #f0eaff;
+        border: 1px solid #aa99ff;
+        text-decoration: none;
+        letter-spacing: 2px;
+        transition: all 0.3s ease;
+    }
+
+    .button:hover {
+        background-color: rgba(170,153,255,0.15);
+        box-shadow: 0 0 12px rgba(170,153,255,0.6);
+    }
+
+    strong {
+        color: #bbaaff;
+    }
+</style>
 
     <h1>RECLAIMED RITUAL</h1>
 
