Add garments diverted from landfill information

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         color: #bbaaff;
     }
 </style>
-
+<p><strong>Garments Diverted from Landfill: 27</strong></p>
     <h1>RECLAIMED RITUAL</h1>
 
     <p>
