--- a/index.html
+++ b/index.html
@@ -1,122 +1,159 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Reclaimed Ritual</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>The Reclaimed Ritual</title>
 
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Courier New', monospace;
-            background-color: #0e0e12;
-            color: #f1e8f5;
-            text-align: center;
-            overflow-x: hidden;
-        }
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
-        /* subtle gradient glow background */
-        body::before {
-            content: "";
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 20% 30%, rgba(255, 170, 200, 0.15), transparent 60%),
-                        radial-gradient(circle at 80% 70%, rgba(150, 255, 150, 0.1), transparent 60%);
-            z-index: -1;
-        }
+<style>
 
-        header {
-            padding: 80px 20px 40px 20px;
-        }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Orbitron', sans-serif;
+  background: linear-gradient(-45deg, #0a0a0f, #1a0d1f, #130015, #0f001f);
+  background-size: 400% 400%;
+  animation: gradientMove 15s ease infinite;
+  color: #e6ccff;
+  overflow-x: hidden;
+  cursor: crosshair;
+}
 
-        h1 {
-            font-size: 3.5em;
-            letter-spacing: 6px;
-            color: #ffd6ea;
-            text-shadow: 0 0 15px rgba(255, 170, 200, 0.6);
-        }
+@keyframes gradientMove {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
 
-        .tagline {
-            font-size: 1.2em;
-            color: #cfc4da;
-            margin-top: 20px;
-        }
+.container {
+  text-align: center;
+  padding: 100px 20px;
+  position: relative;
+}
 
-        .divider {
-            width: 200px;
-            height: 1px;
-            background: linear-gradient(to right, transparent, #888, transparent);
-            margin: 40px auto;
-        }
+h1 {
+  font-family: 'Cinzel', serif;
+  font-size: 3.5rem;
+  letter-spacing: 6px;
+  text-shadow: 0 0 10px #c77dff, 0 0 30px #7209b7;
+  animation: glitch 2s infinite;
+}
 
-        .counter {
-            font-size: 1.3em;
-            color: #a8f0b8;
-            text-shadow: 0 0 8px rgba(120,255,150,0.6);
-            margin-bottom: 30px;
-        }
+@keyframes glitch {
+  0% { text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff; }
+  50% { text-shadow: -2px 0 #ff00ff, 2px 0 #00ffff; }
+  100% { text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff; }
+}
 
-        .button {
-            display: inline-block;
-            padding: 14px 28px;
-            border: 1px solid #ffb6d9;
-            color: #ffb6d9;
-            text-decoration: none;
-            letter-spacing: 2px;
-            transition: 0.3s ease;
-        }
+.subtitle {
+  font-size: 1.2rem;
+  opacity: 0.7;
+  margin-bottom: 50px;
+  letter-spacing: 2px;
+}
 
-        .button:hover {
-            background: rgba(255,182,217,0.15);
-            box-shadow: 0 0 20px rgba(255,182,217,0.6);
-        }
+.glass-card {
+  background: rgba(255,255,255,0.05);
+  backdrop-filter: blur(12px);
+  border: 1px solid rgba(255,255,255,0.1);
+  padding: 30px;
+  border-radius: 20px;
+  width: 300px;
+  margin: 20px auto;
+  box-shadow: 0 0 20px rgba(199,125,255,0.3);
+  transition: 0.4s ease;
+}
 
-        .about {
-            max-width: 600px;
-            margin: 80px auto;
-            line-height: 1.8;
-            color: #d8d0e2;
-        }
+.glass-card:hover {
+  transform: scale(1.05) rotate(-1deg);
+  box-shadow: 0 0 40px rgba(255,0,255,0.6);
+}
 
-        footer {
-            margin-top: 80px;
-            padding: 20px;
-            font-size: 0.9em;
-            color: #777;
-        }
-    </style>
+button {
+  margin-top: 20px;
+  padding: 12px 30px;
+  background: linear-gradient(90deg, #7209b7, #ff00ff);
+  border: none;
+  border-radius: 30px;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 2px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 20px #ff00ff;
+}
+
+.floating {
+  position: absolute;
+  font-size: 20px;
+  opacity: 0.2;
+  animation: float 10s infinite linear;
+}
+
+@keyframes float {
+  from { transform: translateY(100vh); }
+  to { transform: translateY(-100vh); }
+}
+
+.sparkle {
+  position: fixed;
+  width: 3px;
+  height: 3px;
+  background: #fff;
+  border-radius: 50%;
+  animation: sparkleMove 5s linear infinite;
+}
+
+@keyframes sparkleMove {
+  from { transform: translateY(0); opacity: 1;}
+  to { transform: translateY(-100vh); opacity: 0;}
+}
+
+</style>
 </head>
 
 <body>
 
-    <header>
-        <h1>RECLAIMED RITUAL</h1>
-        <div class="tagline">
-            soft decay • sustainable resurrection • stitched survival
-        </div>
+<div class="container">
+  <h1>THE RECLAIMED RITUAL</h1>
+  <div class="subtitle">soft machinery • sacred distortion • digital devotion</div>
 
-        <div class="divider"></div>
+  <div class="glass-card">
+    <p>enter the archive of unraveling threads</p>
+    <button>Enter</button>
+  </div>
 
-        <div class="counter">
-            garments diverted from landfill: 27
-        </div>
+  <div class="glass-card">
+    <p>fragments of a forgotten signal</p>
+    <button>Decode</button>
+  </div>
 
-        <a href="#" class="button">enter the collection</a>
-    </header>
+</div>
 
-    <section class="about">
-        This project reworks forgotten garments into something eerie,
-        soft, and intentional. Every piece saved is one less item
-        decomposing in a landfill. Sustainable fashion —
-        but make it haunted.
-    </section>
+<div class="floating" style="left:10%; animation-duration:12s;">✦</div>
+<div class="floating" style="left:30%; animation-duration:15s;">☾</div>
+<div class="floating" style="left:50%; animation-duration:18s;">⛧</div>
+<div class="floating" style="left:70%; animation-duration:20s;">✧</div>
+<div class="floating" style="left:90%; animation-duration:17s;">☽</div>
 
-    <footer>
-        © 2026 Reclaimed Ritual
-    </footer>
+<script>
+function createSparkle() {
+  const sparkle = document.createElement('div');
+  sparkle.classList.add('sparkle');
+  sparkle.style.left = Math.random() * window.innerWidth + 'px';
+  sparkle.style.top = window.innerHeight + 'px';
+  document.body.appendChild(sparkle);
+  setTimeout(() => sparkle.remove(), 5000);
+}
 
-</body>
-</html>
+setInterval(createSparkle, 200);
+</script>
+
 </body>
 </html>
